[package]
name = "rblog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"             # 强大的错误处理库
clap = { version = "4.5.40", features = ["derive"] }    # 命令行参数解析
gray_matter = "0.2.8"          # 解析Front Matter
pulldown-cmark = "0.13.0"     # Markdown转HTML
serde = { version = "1.0.219", features = ["derive"] }  # 序列化/反序列化
tera = "1.20.0"               # 模板引擎
toml = "0.8.23"               # TOML解析
walkdir = "2.5.0"              # 目录遍历